hphp/hack/test/typecheck/lambda/hhvm_lambda8.php.like_types.exp
File "hhvm_lambda8.php", line 32, characters 5-24:
Invalid argument (Typing[4110])
File "hhvm_lambda8.php", line 32, characters 5-24:
Expected (function(int): bool)
File "hhvm_lambda8.php", line 32, characters 5-24:
But got dynamic because it is an unenforceable type
File "hhvm_lambda8.php", line 33, characters 5-23:
Invalid argument (Typing[4110])
File "hhvm_lambda8.php", line 33, characters 5-23:
Expected Vector<Vector<int>>
File "hhvm_lambda8.php", line 33, characters 5-23:
But got dynamic because it is an unenforceable type
